Update properties file

--- a/MineCraft-Postitem/server.properties
+++ b/MineCraft-Postitem/server.properties
@@ -8,7 +8,7 @@ gamemode=0
 broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
-difficulty=0
+difficulty=1
 spawn-monsters=true
 op-permission-level=4
 pvp=true
@@ -27,11 +27,11 @@ spawn-npcs=true
 allow-flight=false
 level-name=world
 view-distance=10
-resource-pack=http\://orwtmc.000webhostapp.com/minecraft/rpf3232.zip
+resource-pack=
 spawn-animals=true
 white-list=false
 generate-structures=true
-online-mode=false
+online-mode=true
 max-build-height=256
 level-seed=
 prevent-proxy-connections=false
